// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot isSelected가 false일 때 렌더링 결과가 스냅샷과 일치하는지 확인한다 1`] = `
<DocumentFragment>
  <button
    class="text-[10px] rounded-md w-12 min-w-12 max-w-12 h-[28px] px-1 bg-[#212121]"
    data-is-selected="false"
  >
    test
  </button>
</DocumentFragment>
`;

exports[`snapshot isSelected가 true일 때 렌더링 결과가 스냅샷과 일치하는지 확인한다 1`] = `
<DocumentFragment>
  <button
    class="text-[10px] rounded-md w-12 min-w-12 max-w-12 h-[28px] px-1 bg-primary text-text-black"
    data-is-selected="true"
  >
    test
  </button>
</DocumentFragment>
`;
